Updated JS on conroller and factory, working.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-      <title>My Web Site - Home Page</title>
+      <title>Reindeer Generator</title>
     </head>
   
     <body>
@@ -10,8 +10,6 @@
   
       <article id="colored-reindeer">
       </article>
-      <article id="">
-        </article>
 
       <script src="factory.js"></script>
       <script src="controller.js"></script>
